--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="https://picsum.photos/50">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      href="./src/assets/rs-low-resolution-logo-color-on-transparent-background.png"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RS</title>
   </head>
   <body>
